--- a/.htaccess
+++ b/.htaccess
@@ -4,11 +4,11 @@ RewriteRule ^([^\.]+)$ $1.html [NC,L]
 
 ## contrôle du cache navigateur - Expire headers
 # One year for image files
-<filesMatch ".+(jpg|jpeg|png|gif|ico)$">
+<filesMatch ".(jpg|jpeg|png|gif|ico)$">
 Header set Cache-Control "max-age=31536000, public"
 </filesMatch>
 # One month for css and js
-<filesMatch ".+(css|js)$">
+<filesMatch ".(css|js)$">
 Header set Cache-Control "max-age=2628000, public"
 </filesMatch>
 # One year for external files
@@ -16,7 +16,7 @@ Header set Cache-Control "max-age=2628000, public"
 Header set Cache-Control "max-age=31536000, public"
 </filesMatch>
 # One year for js dependencies
-<filesMatch ".+.\min\.js$">
+<filesMatch ".(min\.js)$">
 Header set Cache-Control "max-age=31536000, public"
 </filesMatch>
 
